# ChangeLog for app-text/yagf
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/yagf/ChangeLog,v 1.20 2013/03/24 15:39:45 hwoarang Exp $

  24 Mar 2013; Markos Chandras <hwoarang@gentoo.org> yagf-0.9.2.ebuild:
  Default to tesseract implementation

  24 Mar 2013; Richard Freeman <rich0@gentoo.org> yagf-0.9.2.ebuild,
  metadata.xml:
  revert cuneiform flag removal - package will stay around

  22 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml,
  yagf-0.9.2.ebuild:
  Drop cuneiform and tesseract use flags and always pull the tesseract
  dependency as the other one is going away

  20 Mar 2013; Sergey Popov <pinkbyte@gentoo.org> yagf-0.9.2.ebuild:
  Revert subslot operator addition to poppler dependency, wrt bug #462020

  17 Mar 2013; Sergey Popov <pinkbyte@gentoo.org> -yagf-0.9.ebuild,
  -files/yagf-0.9-mdv-linkage.patch:
  Drop old

  17 Mar 2013; Sergey Popov <pinkbyte@gentoo.org> yagf-0.9.2.ebuild:
  Adjust poppler dependency, wrt bug #462020

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> yagf-0.9.2.ebuild,
  yagf-0.9.ebuild:
  Move Qt dependencies to the new category

*yagf-0.9.2 (20 Feb 2013)

  20 Feb 2013; Sergey Popov <pinkbyte@gentoo.org> +yagf-0.9.2.ebuild:
  Version bump, wrt bug #434846 - EAPI 5, l10n eclass, epatch_user support

  17 Feb 2013; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  Package will be maintained by Aleksandr Yakimov through proxy maintainers

  16 Feb 2013; Pacho Ramos <pacho@gentoo.org> -yagf-0.8.7.ebuild, metadata.xml:
  Cleanup due bug #96436

  03 Sep 2012; Michael Palimaka <kensington@gentoo.org> yagf-0.8.7.ebuild,
  yagf-0.9.ebuild:
  Add missing slot dependencies on Qt.

*yagf-0.9 (19 Mar 2012)

  19 Mar 2012; Peter Volkov <pva@gentoo.org> -yagf-0.8.4.ebuild,
  -yagf-0.8.5.ebuild, -yagf-0.8.6.ebuild, +yagf-0.9.ebuild,
  +files/yagf-0.9-mdv-linkage.patch, metadata.xml:
  Version bump, bug #395509, thank yaleks for this job. Drop old.
