@@ -2,25 +2,19 @@
 Hash: SHA256
 
 DIST yagf-0.9.2.tar.gz 258305 SHA256 1099760462c029aa9919ef96809a1b0252d8d735d9d0807ce790f9d3e1e271b8 SHA512 7348b1611654e9478ef915a5c56f729495382e083bf99ad85284a19499027ad380f7781466aa6c21796859623ca3526ce0965f690c784aa2d459a22d201ef98f WHIRLPOOL b91ef8688801951fe780bdb6e005abd3b97ac42ab7f8d0e9b13ab83a7a163caa445d95b6668328ed1336137ca4bfb5391078347f06fd97ca1a3721b7a90db384
+DIST yagf-0.9.3.2.tar.gz 766396 SHA256 32dd2a60ac04f9b08ec06a4e2974fde2fe3af60238b6a1a8de5a0a29b6ead231 SHA512 79fd1f9fe3a6d10e568b46653d6afd8ef050b4dead58aea42f42888461a1a095ff85e0cf577cb641ba13fb4e9be1efadd000688e100675a03f2c91952211b6fc WHIRLPOOL 37d5d777de797a54676933ec4a35668a4a248d6e90f181ab2e414af5e97ab1c8d9297b5ecbe3c99b1db64d536a234e51fada3f0e1a2353119de367632c567961
 EBUILD yagf-0.9.2.ebuild 1227 SHA256 9550fd19216d71ef069f7c3b32c625df19138f13eccefffa79c8980aa8b622f0 SHA512 4141ebc473ecc55bd503d05597c39fe0aa97321f345d98a0ef3ee5ea16150c62949dba8d0cd37fc3a5c7e16750f272ea18aaa2853362f74e13381470af8f0f58 WHIRLPOOL 2d68573d5705461f492176d47216e36365126541f9104524f152705ceb2a22ac262565ef726e48d13fedcb30908e563b568b47822e41525c9e6b5d9c30174e05
-MISC ChangeLog 3681 SHA256 3316d103bf254329cd650bbe7226a578b555c7855751307e9ee3aacd36d944a3 SHA512 11a7851ab244b43deffa552d6b0ff69a4590dbff73a72f1701331e65d6c84dd000084f7a57dd840f4e97556225617633d818135fe1af19f1f25f4b02cae729a4 WHIRLPOOL f84e4d8e2906c2b1c6b37b0409a89afd2c13902b7a1671111e7d63309b40504e847c6eaa612bec03cbac5797b04d84608cf64a41d2521538a7ec6635358c7cf1
+EBUILD yagf-0.9.3.2.ebuild 1587 SHA256 dafb482916591061440027ad3c9e4a96ac59f382f5c129011329b4344a4542af SHA512 0d16a8c3f0eae87120d5777ea32e16488a90cacc9fb9195e30a06bdb19d7802dde4b277de49c0984631247f0d2f7304cc727237c64f9248113abbeaa7b6172be WHIRLPOOL f1c78caff39117d912f59f9ff79b394262d5757986ade3e1fe4a2664aa2606c15ebb1d0133ff2705a0ed9a7a7f51a0dbf15c2936aa546c2a0eddd64d882a9d2f
+MISC ChangeLog 3881 SHA256 4e9bb1e99f56b05ad936a5eb3c0dd7c241d07be501811b5fcbcb5402f987f1c9 SHA512 aacc42cc9df7a058de52c2772f298a0dc5375d0039959c96e1220f374e23869bd38982cf52164ef6e0ea71aeb9b00cb858caabd5db4a5a4a4df6108db4fcc543 WHIRLPOOL 7a97f51341b2545bbf3fc424b9b53160acd13e3c47fe686c36c579731a53caa76a27be2272c53cfb99e1d68b27edd180b5c46ad327f12c782369aad93e0a5a2b
 MISC metadata.xml 1322 SHA256 06a3eda47bab13b7be3f04b2e36fe5dc459487aa3c7506409b01578154349c93 SHA512 822c9a9c4385a7ef705584885bdcaebea1c61ac9c74fca05b1eb528d27fe5ba7468c9bcabfd48b9d92d95958125fe7d3f1f725ebc7dbce1afacfa60b7142c1d5 WHIRLPOOL d83b8b66abdc8bf85545fb2a87e1d194c8e250e8d80f9351fac612177c4cd57c7ec937b7db99e622f43b7d00b16d370e3cb5ff49c58047924a7fa7d332a71fbd
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJRTx5AXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88a2EQAIqghGpAOj8ZnwWYsno8dp4K
-UZg7kxLHnv9ZcPpseTCM6wEXn6EsZm/RR98CYY3mB4Vj3jsn/nzmmDa7C8ptCo5n
-alDUWMK4plt7x4DyYs+PjX6fPETMBVWp2mf4e31F2X7BCU6cDfbTj9dsTuv6pZbY
-OGBemxG7kB7mQDiy1CFcqQIlq9teqkkRzEYwWi8dxRlQ6lDYbjDsVv57hVMy1qtV
-bXoCGuegh2MZCmv5snj56D2/tfW2PhbXWgyyxVU7I3dGNRN7ciBWkuOvuvxN1jqA
-cN3/JH9QVlC7kL3SiybczZRzFNkIcH28QNSNDDpBZ4IyFCqK5fQU1xBn48tK/AiD
-GlkxT+D3XwGUz6ljkP5TVbkBePPPBhX1mM/lzRl6fVtq8MNP10RBFz/UKoBFB0IO
-M+GcqBkBFIniBy7W7YxKS5Ix+JDmK7XIjFp/VyzhVd/FcmDjUhPCuCnrtIxU7MRd
-KNsSLVlZhyigEu2zKQBV5qR/jX9lcrNFxbnywWsetB4xR1dKQeIc1eyoPXfisHVQ
-4VuVWUECvH7s91bZB/gwcYndFmSK7C+M/rOxjWpsxnDByubUaqa86qOIRGwzxnz4
-TMMd13eLtKo0W8Al3qu78hdwiWTGgWQJiOv/h2G3zMbs3EzthdniQbqHV5iZCsK7
-GRSD72EcoAxE+eqfGlJc
-=yT4j
+iQEcBAEBCAAGBQJTa1YQAAoJECo/aRed9267YKEH/2wiPVkUY5nrl6f7W5kevxUc
+Rb2SZL7icWCJzIheDAcYkTEYE7Or9NltkXIDUU71hUdbHr0H0Gb3BqCi8NXBL4qX
+JA31bGCLqcWLnOvVgJ5ilKgb8fVRs5Xpp4n70YuudIJg3TDd6cE5jGWd75QrHl6w
+njvA7Tj7sTtJR0+FZ/blN8IB1AtMFYc72pejzFA7SY0tk3Yt/ZOqvU9TiUzj3Fho
+O1Txk0gONTh6RaCXghus3GiBajYTxdhpk8fRVbU7JQBh+GKH89rbRuuErlcqQawy
+jDvjk4fr+O7zt/0pBFJrnkWG/7XQV91BE5dWq5oTML8I3Hw93S2jFQn27dkf+UI=
+=QdyP
 -----END PGP SIGNATURE-----
