@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-qt/qtcore:4 dev-qt/qtgui:4 app-text/aspell sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=Graphical front-end for cuneiform and tesseract OCR tools
+EAPI=5
+HOMEPAGE=http://symmetrica.net/cuneiform-linux/yagf-en.html
+IUSE=scanner cuneiform +tesseract pdf linguas_fr linguas_ru
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3
+RDEPEND=dev-qt/qtcore:4 dev-qt/qtgui:4 app-text/aspell cuneiform? ( app-text/cuneiform ) tesseract? ( app-text/tesseract ) scanner? ( media-gfx/xsane ) pdf? ( || ( app-text/poppler[utils] app-text/ghostscript-gpl ) )
+REQUIRED_USE=|| ( cuneiform tesseract )
+SLOT=0
+SRC_URI=http://symmetrica.net/cuneiform-linux/yagf-0.9.3.2.tar.gz
+_eclasses_=cmake-utils	412d9e2d2c6f85f46dad595e68570d21	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	l10n	33bde4fb0cfd3a21a277b66bfd837e19	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=42792440153dc517330d1f33e6f59ecb
